# payments-rs

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  docker-compose.e2e.yaml
.github/workflows/: ci.yml  e2e.yml
examples/: lnd_onchain_example.rs  revolut_example.rs  stripe_example.rs
scripts/: e2e-up.sh
src/: currency.rs  json_api.rs  lib.rs  webhook.rs
src/fiat/: mod.rs  revolut.rs  stripe.rs
src/lightning/: bitvora.rs  lnd.rs  mod.rs
src/onchain/: lnd.rs  mock.rs  mod.rs
tests/: e2e_lightning.rs  e2e_onchain.rs
tests/common/: mod.rs
