[package]
name = "payments-rs"
version = "0.2.0"
edition = "2024"

[features]
default = ["method-lnd", "method-bitvora", "method-revolut", "rocket"]
method-lnd = ["lightning", "dep:fedimint-tonic-lnd", "dep:hex"]
method-bitvora = ["lightning", "json-api", "webhook", "dep:hmac", "dep:sha2", "dep:tokio-stream", "dep:lightning-invoice"]
method-revolut = ["fiat", "json-api", "webhook", "dep:chrono"]
tls-ring = ["fedimint-tonic-lnd/tls-ring"]
tls-aws = ["fedimint-tonic-lnd/tls-aws-lc-rs"]

json-api = ["dep:serde", "dep:serde_json", "dep:reqwest"]
webhook = ["dep:tokio", "tokio/sync", "tokio-stream/sync"]
rocket = ["dep:rocket"]
lightning = []
fiat = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
log = "0.4"

tokio = { version = "1", default-features = false, optional = true }
tokio-stream = { version = "0.1", optional = true }
rocket = { version = "0.5", optional = true, default-features = false }
fedimint-tonic-lnd = { git = "https://github.com/v0l/tonic_lnd.git", rev = "34751076c5797eb5b48b59d048ab3fa74e0410aa", default-features = false, features = ["lightningrpc", "invoicesrpc"], optional = true }
reqwest = { version = "0.12", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
lightning-invoice = { version = "0.33", optional = true }
