[package]
name = "payments-rs"
version = "0.2.0"
edition = "2024"

[features]
default = ["method-lnd", "method-bitvora", "method-revolut", "method-stripe"]
method-lnd = ["lightning", "dep:fedimint-tonic-lnd", "dep:hex"]
method-bitvora = ["lightning", "json-api", "webhook", "dep:hmac", "dep:sha2", "dep:tokio-stream", "dep:lightning-invoice"]
method-revolut = ["fiat", "json-api", "webhook", "dep:chrono"]
method-stripe = ["fiat", "webhook", "dep:hmac", "dep:sha2", "dep:hex", "dep:serde", "dep:serde_json", "dep:serde_html_form", "dep:reqwest"]
tls-ring = ["fedimint-tonic-lnd/tls-ring"]
tls-aws = ["fedimint-tonic-lnd/tls-aws-lc-rs"]

json-api = ["dep:serde", "dep:serde_json", "dep:reqwest"]
webhook = ["dep:tokio", "tokio/sync", "tokio-stream/sync"]
rocket = ["dep:rocket"]
lightning = []
fiat = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
log = "0.4"

tokio = { version = "1", default-features = false, optional = true }
tokio-stream = { version = "0.1", optional = true }
rocket = { version = "0.5", optional = true, default-features = false }
fedimint-tonic-lnd = { git = "https://github.com/v0l/tonic_lnd.git", rev = "57fcd1ac2e8834c6f93cfa3c84ba67420a9dd3ed", default-features = false, features = ["lightningrpc", "invoicesrpc"], optional = true }
reqwest = { version = "0.13", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_html_form = { version = "0.4", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
lightning-invoice = { version = "0.34", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }