[package]
name = "payments-rs"
version = "0.2.0"
edition = "2024"
description = "A Rust library for integrating with multiple payment providers (Stripe, Revolut, LND, Bitvora)"
license = "MIT"
repository = "https://github.com/v0l/payments-rs"
keywords = ["payments", "stripe", "lightning", "bitcoin", "revolut"]
categories = ["api-bindings", "asynchronous"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = ["method-lnd", "method-bitvora", "method-revolut", "method-stripe", "tls-ring"]
method-lnd = ["lightning", "dep:fedimint-tonic-lnd", "dep:hex", "dep:rustls"]
method-bitvora = ["lightning", "json-api", "webhook", "dep:tokio-stream"]
method-revolut = ["fiat", "json-api", "webhook", "dep:chrono"]
method-stripe = ["fiat", "webhook", "dep:hex", "dep:serde", "dep:serde_html_form", "dep:reqwest"]
tls-ring = ["fedimint-tonic-lnd?/tls-ring", "rustls?/ring"]
tls-aws = ["fedimint-tonic-lnd?/tls-aws-lc", "rustls?/aws-lc-rs"]

json-api = ["dep:serde", "dep:serde_json", "dep:reqwest"]
webhook = ["dep:tokio", "tokio/sync", "tokio-stream/sync", "dep:hmac", "dep:sha2"]
rocket = ["dep:rocket"]
lightning = ["dep:lightning-invoice"]
fiat = ["dep:serde_json"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
log = "0.4"

tokio = { version = "1", default-features = false, optional = true }
tokio-stream = { version = "0.1", optional = true }
rocket = { version = "0.5", optional = true, default-features = false }
fedimint-tonic-lnd = { version = "0.4", default-features = false, features = ["lightningrpc", "invoicesrpc", "routerrpc"], optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
reqwest = { version = "0.13", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_html_form = { version = "0.4", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
lightning-invoice = { version = "0.34", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[example]]
name = "revolut"
path = "examples/revolut_example.rs"
required-features = ["method-revolut"]

[[example]]
name = "stripe"
path = "examples/stripe_example.rs"
required-features = ["method-stripe"]